--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -79,6 +79,9 @@
       width: 100%;
       text-align: center;
       padding-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       @media (min-width: $device-bp-large) {
         width: 50%;
@@ -88,33 +91,37 @@
       }
     }
 
-      h2 {
-        font-size: 32px;
-        font-weight: 400;
-        text-transform: uppercase;
-        margin-bottom: 20px;
-      }
-      h2 span {
-        color: $color-main;
-        font-weight: 700;
-      }
-      p {
-        line-height: 24px;
-        font-size: 16px;
-        font-weight: 100;
-      }
+    h2 {
+      font-size: 32px;
+      font-weight: 400;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+    h2 span {
+      color: $color-main;
+      font-weight: 700;
+    }
+    p {
+      line-height: 24px;
+      font-size: 16px;
+      font-weight: 100;
+    }
 
 // button styling
     a {
       text-decoration: none;
-      .button.top {
-        width: 300px;
-        height: 40px;
-        margin: 25px auto;
-        line-height: 40px;
-        font-weight: 600;
-      }
     }
 
+    .btn_more {
+      width: 300px;
+      height: 40px;
+      line-height: 40px;
+      font-weight: 600;
+      margin: 15px auto;
+
+      @media (min-width: $device-bp-large) {
+        margin: 25px auto;
+      }
+    }
   }
 }
