--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -2,10 +2,5 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Raleway, sans-serif;
+  font-family: Raleway, Verdana, sans-serif;
 }
-// .col::before, .col::after {
-//   content: "";
-//   clear: both;
-//   display: block;
-// }
