--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -74,6 +74,7 @@ header {
 
             a {
               @include menu_link;
+              cursor: pointer;
             }
           }
         }
